--- a/app/assets/stylesheets/buttons.sass
+++ b/app/assets/stylesheets/buttons.sass
@@ -11,7 +11,10 @@
     padding: 7px 18px
     cursor: pointer
     font-size: 18px
-
+    &:disabled
+        color: grey
+        cursor: not-allowed
+        border-color: grey
 .actions
     padding: 10px
 .right
