--- a/app/views/users/admin_dashboard.html.erb
+++ b/app/views/users/admin_dashboard.html.erb
@@ -7,12 +7,13 @@
 <p class="intro-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 <br/>
 <div class="filters">
-  <h3>Filters</h3>
   <form action="/admin_dashboard" method="GET">
-    <div class="field">
+      <input type="submit" class="custom-button right" value="SEARCH"></input>
+  <h3>Filters</h3>
+    <div class="field"> 
       <label class="label">E-mail </label>
       <input name="email" placeholder="Find by e-mail"></input>
-      <input type="submit" class="custom-button" value="SEARCH"></input>
+     
     </div>
   </form>
 </div>
