Add view and route for reviewing user dashboard from admin user

--- a/app/assets/stylesheets/buttons.sass
+++ b/app/assets/stylesheets/buttons.sass
@@ -30,6 +30,7 @@
     outline: none
     text-transform: uppercase
     color: $etsit_blue
+    margin-left: -3px
 .input-right
     border-radius: 5px 0px 0px 5px !important
     border: 2px solid $etsit_blue !important
