--- a/app/assets/stylesheets/general.sass
+++ b/app/assets/stylesheets/general.sass
@@ -63,3 +63,8 @@ body
 		color: $etsit-blue
 		&:hover
 			text-decoration: underline
+	.no-results
+		color: $etsit-blue
+		text-align: center
+		background-color: #f7f7f7
+		padding: 10px		
